testsuite/positive/autoproperty.n
using System.Console;

public interface ITest
{
  Prop : int { get; set; }
}
 
public class A
{
  public this(i : int) { Prop1 = i; }
  public Prop1 : int { get; private set; }
  public Prop2 : string { get; set; }
} 
 
module Program
{
  Main() : void
  {
    def a = A(123);
    a.Prop2 = "<789>";
    WriteLine($"a.Prop1=$(a.Prop1); a.Prop2=$(a.Prop2);");
  }
}

/*
BEGIN-OUTPUT
a.Prop1=123; a.Prop2=<789>;
END-OUTPUT
*/
