testsuite/negative/Issue-1339.n
public class Base 
{
  public Prop : bool { get; private set; }

  public delegate TestDelegate() : void;
  public Test : TestDelegate { get; private set; }
}
  
public class Derived : Base
{
  public Foo () : void
  {
    this.Prop = false; // E: property accessor method Base.set_Prop\(value : bool\) : void is inaccessible
    this.Test += () => {}; // E: property accessor method Base.set_Test\(value : Base.TestDelegate\) : void is inaccessible
  }          
}

module Program
{
  Main() : void {}
}
